# RudimentLab

./: README.md  app.py  exercise.py  metronome.py  pyproject.toml
lib/: audio_backend.py  exercise.py  metronome.py  sound_generator.py  sound_maker.py
utils/: audio_utils.py  generate_click_sounds.py
